--- a/crates/network/Cargo.toml
+++ b/crates/network/Cargo.toml
@@ -18,5 +18,5 @@ flate2 = "1"
 serde = "1"
 byteorder = "1.4"
 tracing = "0.1"
-bitvec = "1"
+bitvec = { version = "1", default-features = false, features = ["alloc"] }
 mchprs_text = { path = "../text" }
