testing, removed networking from Cargo.toml

--- a/crates/world/Cargo.toml
+++ b/crates/world/Cargo.toml
@@ -15,11 +15,11 @@ repository.workspace = true
 [dependencies]
 serde = "1"
 mchprs_blocks = { path = "../blocks" }
-mchprs_network = { path = "../network", optional = true }
+#mchprs_network = { path = "../network", optional = true }
 rustc-hash = "2.0"
 hematite-nbt = "0.5"
 itertools = "0.13"
 
-[features]
-default = ["networking"]
-networking = ["dep:mchprs_network"]
+#[features]
+#default = ["networking"]
+#networking = ["dep:mchprs_network"]
